Bug#16837 (Missing #ifdef cause compile problem --without-row-based-replication): Added #ifdef's to make code work even when the system is built without row-based replication.